chore(backend)[PW-38]: Provide a better API for the frontend to reduce business logic there
